// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should call the push function with the given path 1`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "path": "/foo",
        },
        undefined,
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "replace": [MockFunction],
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;

exports[`Link should call the push function with the given path 2`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction],
  "replace": [MockFunction],
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;

exports[`Link should call the push function with the given routeName 1`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction] {
    "calls": Array [
      Array [
        "Foo",
        undefined,
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "replace": [MockFunction],
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;

exports[`Link should call the replace function with the given path 1`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction],
  "replace": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "path": "/foo",
        },
        undefined,
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;

exports[`Link should not do anything if event.defaultPrevented is true 1`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction],
  "replace": [MockFunction],
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;

exports[`Link should not do anything if there is no path or routeName prop 1`] = `
Object {
  "getParam": [MockFunction],
  "goBack": [MockFunction],
  "navigate": [MockFunction],
  "pop": [MockFunction],
  "push": [MockFunction],
  "replace": [MockFunction],
  "setParams": [MockFunction],
  "source": null,
  "state": Object {
    "key": "",
    "params": Object {},
    "routeName": "",
    "url": "",
  },
}
`;
